# vast

./: AGENDA.rst  README.rst  meson.build
benchmarks/: fill-benchmark.vala  meson.build
prototype1/src/: array.vala  arrayiterator.vala  arrayslice.vala  recordtype.vala  typedescr.vala  ufunc.vala  ufuncfactory.vala  vast.vala
prototype1/tests/: test-array.vala
src/: array.c  array.vala  arrayiterator.vala  formatter.vala  function.vala  gi-operation.vala  gradient.vala  graph-executor.vala  graph.vala  iterator-style.vala  iterator.vala  meson.build  multi-iterator.vala  numeric.vala  operation.vala  simple-operation.vala  slice.vala  string-formatter.vala  tensor-internal.c  tensor.c  tensor.vala  typedescr.vala  typefactory.vala  ufunc.vala  umath.vala  value.vala  vast-cl-tensor.c  vast-cl-tensor.h  vast-dtype.vala  vast.vala
src/cl/: meson.build  vast-tensor.h  vast.h
src/cl/kernels/: meson.build  sin.cl
src/gi/overrides/: Vast.py
src/routines/: core.vala  math.vala  meson.build
tests/: gi-test.py  gocl-test.vala  meson.build  test-array.vala  test-dtype.vala  test-ufunc.vala  vast-test-graph.vala  vast-test.vala
vapi/: gobject-introspection-1.0.vapi
